ajouter les roquetes swagger
